--- a/Doggram/LaunchScreen.storyboard
+++ b/Doggram/LaunchScreen.storyboard
@@ -22,14 +22,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.transparent" translatesAutoresizingMaskIntoConstraints="NO" id="Io0-7W-oe1">
-                                <rect key="frame" x="121.66666666666669" y="351" width="150" height="150"/>
+                                <rect key="frame" x="121.66666666666669" y="-91" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="7rZ-oH-u25"/>
                                     <constraint firstAttribute="height" constant="150" id="IOs-Nl-0dt"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to dogram" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dM7-eg-D59">
-                                <rect key="frame" x="116" y="575" width="155" height="20"/>
+                                <rect key="frame" x="116" y="59" width="155" height="20"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -45,6 +45,7 @@
                             <constraint firstItem="obG-Y5-kRd" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="20" symbolic="YES" id="SfN-ll-jLj"/>
                             <constraint firstItem="dM7-eg-D59" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" id="UY3-MD-Mhf"/>
                             <constraint firstItem="dM7-eg-D59" firstAttribute="top" secondItem="Io0-7W-oe1" secondAttribute="bottom" id="Vpz-l9-YkN"/>
+                            <constraint firstItem="dM7-eg-D59" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="116" id="WLG-9O-jJM"/>
                             <constraint firstAttribute="bottom" secondItem="obG-Y5-kRd" secondAttribute="bottom" constant="20" id="Y44-ml-fuU"/>
                             <constraint firstItem="Io0-7W-oe1" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="lfq-nH-IT3"/>
                         </constraints>
